--- a/styles/base.css
+++ b/styles/base.css
@@ -29,21 +29,22 @@ h1 {
     text-align: center;
 }
 
-nav {
+.navigation {
     background-color: grey;
+    display: none;
 }
 
-nav ul {
+.navigation ul {
     list-style-type: none;
     padding: 0;
     margin: 0;
 }
 
-nav ul li {
+.navigation ul li {
     padding: 10px;
 }
 
-nav a {
+.navigation a {
     display: block;
     color: #fff;
     text-align: center;
@@ -51,12 +52,35 @@ nav a {
     text-decoration: none;
 }
 
-nav li:hover {
+.navigation li:hover {
     background-color: rgba(255,255,255,0.2);
 }
 
-nav .active {
+.navigation .active {
     background-color: rgba(0,0,0,0.3);
+}
+
+.open {
+	display: block;
+}
+
+#menu {
+	font-size: 1.5rem;
+	border: 0;
+	background: none;
+	color: #fff;
+ 	position: absolute;
+	top: 1rem;
+	right: 1rem;
+}
+
+#menu::before {
+	content: "☰";
+}
+
+#menu.open::before {
+	content: "X";
+	font-size: x-large;
 }
 
 .card {
@@ -67,6 +91,7 @@ nav .active {
     box-shadow: 0 2px 4px rgba(0,0,0,0.1);
 }
 
+
 footer {
     background-color: #333;
     color: white;
@@ -74,4 +99,9 @@ footer {
     padding: 20px;
     position: relative;
     bottom: 0;
+}
+
+.dark {
+    background-color: #000000;
+    color: #fff;
 }
