--- a/styles/larger.css
+++ b/styles/larger.css
@@ -28,6 +28,12 @@
         margin-bottom: 0;
     }
 
+    main picture {
+        grid-column: 1 / -1;
+        text-align: center; 
+        margin-bottom: 0;
+    }
+
     .card {
         margin: 0 0 20px 0;
     }
