--- a/styles/larger.css
+++ b/styles/larger.css
@@ -28,7 +28,7 @@
         margin-bottom: 0;
     }
 
-    main picture {
+    .hero {
         grid-column: 1 / -1;
         text-align: center; 
         margin-bottom: 0;
