--- a/styles/base.css
+++ b/styles/base.css
@@ -32,6 +32,14 @@ header span {
     right: 60px;
 }
 
+main {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    gap: 1rem;
+    padding: 1rem;
+}
+
 h1 {
     font-size: 2rem;
     text-align: center;
@@ -102,7 +110,6 @@ h1 {
 
 .card {
     background-color: white;
-    margin: 20px;
     padding: 20px;
     border-radius: 8px;
     box-shadow: 0 2px 4px rgba(0,0,0,0.1);
