--- a/styles/larger.css
+++ b/styles/larger.css
@@ -17,15 +17,16 @@
     main {
         display: grid;
         grid-template-columns: 1fr 1fr;
-        gap: 20px;
+        row-gap: 1rem;
+        column-gap: 1rem;
         max-width: 1200px;
-        margin: 0 auto;
+
     }
 
     main h1 {
         grid-column: 1 / -1;
         text-align: center; 
-        margin-bottom: 0;
+
     }
 
     .hero {
@@ -34,8 +35,10 @@
         margin-bottom: 0;
     }
 
-    .card {
-        margin: 0 0 20px 0;
+
+    #map-card {
+        grid-column: 1 / -1;
+        text-align: center; 
     }
 
     #menu {
