--- a/styles/form.css
+++ b/styles/form.css
@@ -5,10 +5,7 @@
     --background-color: #ecf0f1;
 }
 
-main {
-    max-width: 600px;
-    margin: 0 auto;
-}
+
 
 form {
     display: flex;
@@ -23,29 +20,29 @@ form {
     display: block;
     background-color: #eee;
     color: #555;
-    width: 100%;
-    /* max-width: 600px; */
     padding: .5rem;
     font-size: 1.2rem;
     border: solid 1px #999;
     border-radius: 6px;
     appearance: none;
+    width: 96%;
+    margin: 1rem 2% 2rem 2%;
 }
 
 .form input[type="range"] {
     width: 100%;    
 }
 
-.form input:required {
+/* .form input:required {
     border-color: red;
 }
 
 .form input:required:valid {
     border-color: green;
-}
+} */
 
 .form input[type="submit"] {
-    background-color: #666;
+    background-color: darkgreen;
     color: #fff;
     padding: .5rem 1rem;
     font-size: 1.2rem;
@@ -54,21 +51,17 @@ form {
     cursor: pointer;
     width: 96%;
     max-width: 400px;
-    margin: -1rem 2% 2rem 2%;
+    margin: 1rem 2% 2rem 2%;
 }
 
 .form input[type="submit"]:hover {
-    background-color: #444;
+    background-color: green;
 }
 
 
-
-
-/* Use the variables in your existing CSS rules */
 body {
     background-color: var(--background-color);
 }
-
 
 #passwordError {
     color: red;
@@ -83,13 +76,13 @@ body {
 
 #rangevalues {
 	display: flex;
-	margin: 0 0 0 6%; 
-    width: 94%;
+    justify-content: space-between;
+    align-items: center;
+
 }
 
 #rangevalues option {
     margin-top: 0;
-	flex: 1 1 auto;
 }
 
 .selection {
