--- a/styles/larger.css
+++ b/styles/larger.css
@@ -44,7 +44,8 @@
 
     #map-card {
         grid-column: 1 / -1;
-        text-align: center; 
+        text-align: center;
+        width: 96%; 
     }
 
     #menu {
