--- a/styles/larger.css
+++ b/styles/larger.css
@@ -20,7 +20,7 @@
         row-gap: 1rem;
         column-gap: 1rem;
         max-width: 1200px;
-
+        margin: 0 auto;
     }
 
     main h1 {
@@ -45,7 +45,13 @@
     #map-card {
         grid-column: 1 / -1;
         text-align: center;
-        width: 96%; 
+        margin: 0 auto 0 0;
+        width: 100%; 
+    }
+
+    #map-card iframe {
+        width: 100%;
+        height: 400px;
     }
 
     #menu {
