--- a/week05/styles/prophets.css
+++ b/week05/styles/prophets.css
@@ -67,3 +67,21 @@ footer {
   border-top: 1px solid #555;
   padding: 20px;
 }
+
+@media screen and (min-width: 768px) {
+    #cards {
+		display: grid;
+        grid-template-columns: repeat(3, 1fr);
+    }
+    section {
+        margin: 0.5rem;
+        padding: 0.5rem;
+    }
+    img {
+        width: auto;
+        max-width: 300px;
+        box-shadow: 0 0 30px #777;
+        height: 200px;
+        border: 1px solid #333;
+    }
+}
