--- a/chamber/styles/larger.css
+++ b/chamber/styles/larger.css
@@ -55,6 +55,13 @@
         border-radius: 10px;
     }
 
+    .row {
+        display: grid;
+        grid-template-columns: repeat(6, 1fr);
+        margin: 0;
+        padding: 0.25rem;
+    }
+
     #sidebar .card {
         width: 100%;
     }
